# meta-yovisto

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: push.yml
src/app/: api.py  main.py
src/app/classification/: predict.py  prepareData.py  training.py  training3.py  training4.py
src/app/core/: settings.py
src/app/duplicate_finder/: createHashes.py  predict.py  preprocessData.py
src/app/recommender/: predict.py  prepareData.py  training.py  webservice.py
src/app/topic_finder/: topic_assistant.py
src/data/: oehTopics.ttl
src/topic_finder/: topic_assistant.py
tests/: predict_duplicates_test.py  predict_similar_documents_test.py  predict_subject_test.py  topic_finder_test.py  topic_finder_tests.py
tests/data/: coeffa.p  coeffb.p  docUrls.p  docnames.p  docs.p  hashes.p  oehTopics.ttl  shingles.p  wirlernenonline.oeh3.npy
